htdocs/theme/raw/sass/components/_list-group.scss
// // modifications for list elements such a list of pages, collections

.list-group {
    a {
        &.text-success {
            @extend .text-success;
        }
        &.text-link {
            @extend .text-link;
        }
    }
    .user-card & {
        max-height: 400px;
        overflow-y: auto;
    }
    .list-nested {
        margin: 5px -15px 0;
        > li > a {
            padding: 5px 15px;
            display: block;
            line-height: 1;
        }
        small {
            @extend .text-midtone;
        }
    }
    &.list-group-unbordered {
        border: 0;
        > .list-group-item {
            border: 0;
            padding: 5px 0;
        }
        li {
            border:0;
            padding: 5px 7px;
        }
        .small {
            padding: 0;
            a {
                padding: 5px 0;
            }
        }
    }
    &.list-group-lite .list-group-item {
        border-radius: 0;
        border-left: 0;
        border-right: 0;
    }

    // removes list-group-item first child's border-top when list-item includes block editing header links
    .block-header:first-child + .list-group-item {
        border-top-width: 0;
    }

    // removes card-footer border-top if it comes straight after list-group
    ~ .card-footer {
        border-top-width: 0;
    }

    // adds the first child border-top back
    &.list-group-top-border {
        &.clearboth {
            clear: both;
        }
        .list-group-item {
            border-top-width: $list-group-border-width;
        }
    }

    // titles that aren't .list-group-item-heading
    .title {
        margin-top: 0;
        font-size: $h4-font-size;
    }
}

.list-group-item-heading {
    margin-top: 0;
    font-size: $h4-font-size;

    .text-small {
        font-family: $font-family-base;
    }

    .notes {
        color: $theme-text-lighttone-color;
    }

    &.text-inline {
        @include media-breakpoint-down(sm) {
            display: block;
        }
    }
}

.card-secondary .list-group-item-heading {
    font-family: $font-family-base;
    margin-top: 0;
    margin-bottom: 0;
    font-size: $font-size-base * 1.1428571428571428; // 16px
    font-weight: $font-weight-normal;
}

.list-group-item.draft,
.list-group-item-warning {
    background-color: $state-warning-bg;
    .list-group-item-heading {
        color: $state-warning-text;
    }
}
.list-group-item-danger {
    .notes {
        color: $theme-text-midtone-color;
    }
}
.list-group-item-private {
    background-color: $list-group-disabled-bg;
    .text-midtone {
        color: $theme-text-color;
    }
}

.list-group-item-link {
    padding: 0;
    a {
        display: block;
        &:hover,
        &:focus {
            background: $list-group-hover-bg;
            text-decoration: none;
        }

        // online users sidebar
        &.online-user {
            padding: 10px 15px;
        }
    }
}

// list-group-item with btn-group
.list-group-item {
    border-left-width: 0;
    border-right-width: 0;

    // default list-group-item has border-top and last child border-bottom
    // first-child needs to take away border-top
    &:first-child {
        border-top-width: 0;
        border-top-left-radius: 0;
        border-top-right-radius: 0;
    }

    // last-child needs to take away border-bottom-radius
    &:last-child {
        border-bottom-left-radius: 0;
        border-bottom-right-radius: 0;
    }

    &.flush {
        padding-left: 0;
        padding-right: 0;
    }

    // for list-group-items that has collapsible indicator on right but need left flushed
    &.flush-collapsible {
        padding-left: 0;
    }

    // blog post buttons
    .list-group-item-controls {
        float: none;
        @include media-breakpoint-up(md) {
            float: right;
        }
    }

    .btn-title {
        padding-left: 5px;
        @include media-breakpoint-down(md) {
            @include sr-only;
        }
    }

    .usericon-heading {
        @extend .clearfix;

        .user-icon {
            display: block;
            margin: 0 5px 0 0;
        }
        .list-group-item-heading {
            margin: 0;
            &.middle {
                margin: 10px 0;
            }
        }
        .list-group-item-heading + .btn {
            margin-top: 10px;
        }
    }
}

.details-before-list-group {
    margin: 0;

    p {
        margin: 10px 0;
    }

    ~ .list-group .list-group-item:first-child,
    ~ .list-group .block-header:first-child + .list-group-item {
        border-top-width: $list-group-border-width;
    }
    ~ .folder-card .list-group-item:first-child,
    ~ .folder-card .block-header:first-child + .list-group-item {
        border-top-width: $list-group-border-width;
    }
}

.list-group-item-default {
    background-color: rgba(scale-color($gray-100, $lightness: 62.75), 0.5);
}

.list-group-item-text {
    background-color: transparent;
    color: $theme-text-color;
}

.section-import {
    .list-group-item .list-group,
    .fieldset-body .list-group {
        padding-top: 10px;
        .list-group-item:last-child {
            border-bottom: 0;
        }
    }
    .list-group-item {
        .list-group-item-heading {
            float: none;
        }
    }
}

.column-list {
    -moz-column-count: 3;
    -moz-column-gap: 20px;
    -webkit-column-count: 3;
    -webkit-column-gap: 20px;
    column-count: 3;
    column-gap: 20px;
    @include media-breakpoint-down(md) {
        -moz-column-count: 2;
        -moz-column-gap: 20px;
        -webkit-column-count: 2;
        -webkit-column-gap: 20px;
        column-count: 2;
        column-gap: 20px;
    }
}

.column-list li {
    list-style-position: inside;
    span.help {
        font-size: inherit;
        .icon {
            font-size: $font-size-base * 1.14285;
        }
    }
}

.showmore {
    text-align: center;
    clear: both;
    width: 100%;
}

// wall block list-group-item-heading
.wall .list-group-item-heading {
    font-size: $font-size-base;
}

// file folder list-group
.filedownload-item {
    .list-group-item-heading {
        font-size: $font-size-base;
    }
    a {
        word-break: break-all;
        vertical-align: top;
    }
    .file-description {
        margin-left: 33px;
    }
}

// attachment files list-group
.has-attachment .list-group {
    // when opened first child needs border-top
    .block-header:first-child + .list-group-item,
    .list-group-item:first-child {
        border-top-width: $list-group-border-width;
    }

    // last-child needs to take away border-bottom but bring back border-radius
    .list-group-item:last-child {
        border-bottom-width: 0;
        border-bottom-left-radius: $list-group-border-radius;
        border-bottom-right-radius: $list-group-border-radius;
    }

    .list-group-item .title {
        font-size: $font-size-sm;
    }
}

// Resume entire block
.resume-content {
    padding: 0 0 10px 0;

    .title {
        font-size: $h5-font-size;
        margin-top: 2em;
    }
}

// Entire resume blocks need to have all list-group-item borders removed but not child list-group ones
.bt-entireresume,
.bt-entireresume-editor {
    .list-group-item.flush {
        border-width: 0;
    }
}

// Resume field blocks need first-child border-top removed
.bt-resumefield,
.bt-resumefield-editor {
    .list-group-item:first-child {
        border-top-width: 0;
    }
}

// Plugins list-group
.plugins-list-group {
    h3.list-group-item-heading {
        margin-bottom: 0;
    }
    div.list-group-item-heading {
        font-size: $font-size-base;
    }
}

.memberswrap,
#friendslist,
#onlinelist {
    .list-group-item {
        .list-group-item-heading {
            margin-bottom: 0;
        }
        .detail {
            margin-left: 53px;
            margin-top: 5px;
            .collapse-indicator {
                margin-right: 5px;
            }
        }
    }
}

// when user icon float left of list-group-item-heading and details under needs to left align with heading
.usericon-heading {
    ~ .detail {
        margin-left: 31px;
    }
}

// Blog post details
.post,
.post-heading {
    .metadata {
        margin: 5px 0;
    }
}

